@@ -44,6 +44,8 @@ Bugfixes:
 * Bugreport #113: zone fetcher started before dropping privileges, so that
   it can bind to socket.
 * Signer Engine defaults to working directory if missing.
+* libhsm: fixed incorrect label length for wildcards (leftmost wildcard label was
+  included in count).
 
 OpenDNSSEC 1.0.0 - 2010-02-09
 
